# almau

./: db.sqlite3  entrypoint.sh  pyproject.toml
app/: admin.py  forms.py  models.py  resources.py  urls.py  utils.py  views.py
app/migrations/: 0001_initial.py  0002_user_verification_code_user_verified.py  0003_rename_uploadcertification_uploadcertificate.py  0004_applicant_remove_uploadid_user_document_and_more.py  0005_applicant_verification_code.py  0006_document_type.py
app/templates/: base.html
app/templates/app/: index.html  index.js  requests.html  table.html  upload_birth.html  upload_certificate.html  upload_ent.html  upload_grant.html  upload_id.html  upload_medical.html  upload_military.html  upload_photo.html
core/: settings.py  urls.py
static/: style.css
